components/nextcloud/nextcloud-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
